--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title></title>
-		<frameset framespacing="0" border="0" rows="0" frameborder="0"><frame name="main" src="http://139.155.90.53:1234/#/" scrolling="auto" noresize></frameset>
+		<frameset framespacing="0" border="0" rows="0" frameborder="0"><frame name="main" src="http://139.155.90.53:1234" scrolling="auto" noresize></frameset>
 	</head>
 	<body>		
 	</body>
